frontend/app/styles/partials/admin.scss
.admin-top-margin {
  margin: 15% auto;
}

.ui.fluid.card.usercard {
  margin: 8px;
  padding: 8px;
}

.column.align-center {
  text-align: center;
}

.ui.grid.user-grid {
  padding: 1%;
  width: 100%;
}

.ui.card.user-card {
  padding: 4px;
  width: 100%;
}

img.user-card-circle {
  border-radius: 50%;
}

p.margin-remove {
  margin-bottom: 0.5em;
}

.two.wide.column.center-avatar {
  margin: auto;
  text-align: center;
}
.permissions {
  overflow-x: scroll;
}

